--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="el">
 <head>
+    <meta name="google-site-verification" content="3-xQFpZrHk6krtKjJSJyBtg3I7aytt7bSBMcCNK1HrU" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft Grand SMP</title>
